--- a/views/article/_video.html
+++ b/views/article/_video.html
@@ -1,5 +1,8 @@
  {{if .Article.VideoTitle}}
-<h5 class="text-center mt-1"><span class="fa fa-video-camera mr-1 text-danger"></span>{{.Article.VideoTitle}}<span class="fa fa-video-camera ml-1 text-danger"></span></h5>
+<h5 class="text-center mt-1">
+    <span class="fa fa-video-camera mr-1 text-danger"></span>
+    {{.Article.VideoTitle}}
+    <span class="fa fa-video-camera ml-1 text-danger"></span></h5>
 {{end}} 
 
 {{if .Article.VideoYoukuId}}
