--- a/views/layout/_head.html
+++ b/views/layout/_head.html
@@ -31,7 +31,6 @@
         ga('send', 'pageview');
 
     </script>
-    <link rel="apple-touch-icon" sizes="180x180" href="//wwww.trytv.org/180x180.png">
-    <link rel="icon" type="image/png" href="//wwww.trytv.org/32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="//wwww.trytv.org/16.png" sizes="16x16">
+    <link rel="apple-touch-icon" sizes="180x180" href="//www.trytv.org/180x180.png">
+    <link rel="icon" type="image/png" href="//www.trytv.org/32.png" sizes="32x32">
 </head>
