--- a/views/layout/_footer.html
+++ b/views/layout/_footer.html
@@ -14,6 +14,7 @@
             <div class="col-sm-2 col-xs-6 text-center">
                 <h5 class="title">酷站分享</h5>
                 <ul>
+                    <li class="text-center"><a target="_blank" href="http://www.miitbeian.gov.cn" rel="nofollow">鄂ICP备16006181号-4</a></li>
                     <li class="text-center"><a rel="nofollow" href="//wwww.youtube.com">youtube</a></li>
                     <li class="text-center"><a href="//www.trytv.org">美剧分享网站</a></li>
                     <li class="text-center"><a href="//wwww.cnfluffy.com">技术博客网站</a></li>
