--- a/views/layout/_nav.html
+++ b/views/layout/_nav.html
@@ -10,6 +10,9 @@
     </a>
     <div class="collapse navbar-collapse" id="navbarNav1">
       <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="http://video.trytv.org">在线看</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="/tag/2">文章精选</a>
         </li>
@@ -19,9 +22,7 @@
         <li class="nav-item">
           <a class="nav-link" href="/">最新资讯</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/tag/10">醒脑图文</a>
-        </li>
+
         <li class="nav-item ">
           <a class="nav-link " href="/subtitle">字幕分享</a>
         </li>
