--- a/views/layout/_footer.html
+++ b/views/layout/_footer.html
@@ -14,6 +14,9 @@
             <div class="col-sm-2 col-xs-6 text-center">
                 <h5 class="title">酷站分享</h5>
                 <ul>
+                    <li class="text-center">
+                        <a target="_blank" href="http://info.trytv.org"><strong>微博秒拍视频下载</strong>info.tryTV.org</a>
+                    </li>
                     <li class="text-center"><a href="http://video.trytv.org/">美剧在线看</a></li>
                     <li class="text-center"><a href="http://www.gaoxiaotu.net/">搞笑图</a></li>
                     <li class="text-center"><a href="//www.trytv.org">美剧分享网站</a></li>
