--- a/views/layout/_footer.html
+++ b/views/layout/_footer.html
@@ -4,11 +4,11 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-2 col-xs-6 text-center">
-                <h5 class="title">技术博客</h5>
+                <h5 class="title">酷站分享</h5>
                 <ul>
-                    <li class="text-center"><a rel="nofollow" href="//www.github.com">github</a></li>
-                    <li class="text-center"><a rel="nofollow" href="//www.stackoverflow.com">stackoverflow</a></li>
-                    <li class="text-center"><a rel="nofollow" href="//wwww.reddit.com">reddit</a></li>
+                    <li class="text-center"><a href="http://www.wukongshipin.com/">悟空视频</a></li>
+                    <li class="text-center"><a href="https://bttt.gq">bttt.gq</a></li>
+                    <li class="text-center"><a href="http://www.gaoxiaotu.net/">搞笑图</a></li>
                 </ul>
             </div>
             <div class="col-sm-2 col-xs-6 text-center">
@@ -18,7 +18,6 @@
                         <a target="_blank" href="http://info.trytv.org"><strong>微博秒拍视频下载</strong>info.tryTV.org</a>
                     </li>
                     <li class="text-center"><a href="http://video.trytv.org/">美剧在线看</a></li>
-                    <li class="text-center"><a href="http://www.gaoxiaotu.net/">搞笑图</a></li>
                     <li class="text-center"><a href="//www.trytv.org">美剧分享网站</a></li>
                     <li class="text-center"><a href="//wwww.cnfluffy.com">技术博客网站</a></li>
                     <li class="text-center"><a target="_blank" href="http://www.miitbeian.gov.cn" rel="nofollow">鄂ICP备16006181号-4</a></li>
