--- a/views/layout/_footer.html
+++ b/views/layout/_footer.html
@@ -9,6 +9,7 @@
                     <li class="text-center"><a href="http://www.wukongshipin.com/">悟空视频</a></li>
                     <li class="text-center"><a href="https://bttt.gq">bttt.gq</a></li>
                     <li class="text-center"><a href="http://www.gaoxiaotu.net/">搞笑图</a></li>
+                    <li class="text-center"><a href="http://www.prohui.com/">产品汇</a></li>
                 </ul>
             </div>
             <div class="col-sm-2 col-xs-6 text-center">
@@ -19,7 +20,6 @@
                     </li>
                     <li class="text-center"><a href="http://video.trytv.org/">美剧在线看</a></li>
                     <li class="text-center"><a href="//www.trytv.org">美剧分享网站</a></li>
-                    <li class="text-center"><a href="//wwww.cnfluffy.com">技术博客网站</a></li>
                     <li class="text-center"><a target="_blank" href="http://www.miitbeian.gov.cn" rel="nofollow">鄂ICP备16006181号-4</a></li>
 
                 </ul>
@@ -28,10 +28,6 @@
                 <div class="text-center">
                     <h5 class="title">新浪微博</h5>
                     <div class="qr-media" data-text="http://weibo.com/dejavuzhou"></div>
-                </div>
-                <div class="text-center">
-                    <h5 class="title">今日头条</h5>
-                    <div class="qr-media" data-text="//www.toutiao.com/m1562467406640130"></div>
                 </div>
                 <div class="text-center">
                     <h5 class="title">腾讯视频</h5>
