--- a/views/layout/_footer.html
+++ b/views/layout/_footer.html
@@ -40,11 +40,8 @@
                 <div class="text-center">
                     <h5 class="title">淘宝网店</h5>
                     <div class="qr-media" data-text="https://trytv.taobao.com"></div>
-                </div>
-
+                </div>fi
             </div>
-
-
         </div>
     </div>
     <!--/.Footer Links-->
