--- a/views/layout/_footer.html
+++ b/views/layout/_footer.html
@@ -39,7 +39,7 @@
                 <div class="text-center">
                     <h5 class="title">淘宝网店</h5>
                     <div class="qr-media" data-text="https://trytv.taobao.com"></div>
-                </div>fi
+                </div>
             </div>
         </div>
     </div>
