--- a/views/article/_video.html
+++ b/views/article/_video.html
@@ -20,11 +20,11 @@
     var defaultBtnColor = "btn-secondary";
     var clickedBtnColor = "btn-unique";
     var colors = ['primary', 'secondary', 'success', 'info', 'warning', 'danger'];
-    var youkuUrl = 'https://ups.youku.com/ups/get.json?vid=' + youkuId + '==&ccode=0502&client_ip=0.0.0.0&client_ts=1499760827&utid=g2aAEVoJyn0CAQ4%2Fpk5BVR8P'
+    var youkuUrl = 'https://ups.youku.com/ups/get.json?vid=' + youkuId + '==&ccode=0508&client_ip=192.168.1.1&client_ts=1499760827&utid=g2aAEVoJyn0CAQ4%2Fpk5BVR8P';
 
     document.getElementById('jerk').onended = function () {
         var index = $(this).data('idx');
-        $('#part > button').removeClass(clickedBtnColor)
+        $('#part > button').removeClass(clickedBtnColor);
 
         if (index < mp4Obj.list.length - 1) {
             $(this).data('idx', index + 1);
@@ -39,7 +39,7 @@
             var selector = "#part > button:nth-child(1)";
             $(selector).addClass(clickedBtnColor);
         }
-    }
+    };
     function getMp4Info(response) {
         var streams = response.data.stream;
         $(streams).each(function (idx, ele) {
@@ -145,7 +145,7 @@
             });
 
             $('#part > button').click(function (event) {
-                $('#part > button').removeClass(clickedBtnColor)
+                $('#part > button').removeClass(clickedBtnColor);
                 $(event.target).addClass(clickedBtnColor);
                 videoPlayer.src = $(event.target).data('src');
                 var idx = $(event.target).data('idx');
@@ -171,7 +171,7 @@
 <script>
     $('#video-div').hide();
     $.post("/video/weibo-parse", { id: '{{.Article.VideoWeiboId}}' }, function (data, status) {
-        $('#video-div > video').attr('src', data)
+        $('#video-div > video').attr('src', data);
         $('#video-div').fadeIn().show();
 
     });
